# spotify-to-tidal-web

./: .cache.db  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  albums not found.txt  fly.toml  pyproject.toml
app/: main.py  sync.py
app/templates/: base.html  index.html  result.html  tidal_device.html
tests/: conftest.py  test_app.py  test_sse.py
