[project]
name = "spotify-to-tidal-web"
version = "0.1.0"
description = "Web app for syncing Spotify playlists to Tidal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2.0",
    "tidalapi>=0.8.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
