[project]
name = "spotify-to-tidal-web"
version = "0.1.0"
description = "Web app for syncing Spotify playlists to Tidal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.0",
    "spotify-to-tidal @ git+https://github.com/perfectritone/spotify_to_tidal.git",
    "sse-starlette>=3.0.3",
    "api-analytics[fastapi]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
